# careweave-ai

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
apps/api/: main.py
data/sample_corpus/: chronic_care.txt  oncology_notes.md
infra/docker/: Dockerfile
infra/scripts/: bootstrap.sh
tests/: test_api.py  test_chunking.py  test_eval.py
